# resume

./: .gitignore  .latexmkrc  AUDIT_MODE_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  audit_build.sh  copilot.patch  migrate_to_resume_engine.sh  patch_jinja_usepackage.sh  patch_latex_style_resolution.sh  pyproject.toml  requirements.txt  resume.md  resume.sty  resume.tex  update_to_local_tectonic.sh
reflector/: .actrc  .chktexrc  .commitlintrc.json  .editorconfig  .gitignore  .latexindent.yml  .latexmkrc  .pre-commit-config.yaml  .release-please-config.json  .zenodo.json  00-README.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  README_HF.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  Taskfile.yml  codemeta.json  publication.json  pyproject.toml  reflector.code-workspace  release-manifest.json
reflector/.devcontainer/: Dockerfile  devcontainer.json
reflector/.github/: dependabot.yml
reflector/audits/: archival-strategy-audit.md  arxiv-validation.md  build-reproducibility.md  chktex-audit.md  doi-metadata-audit.md  final-publication-audit.md  orcid-synchronization.md  pages-asset-lifecycle.md  pages-publication-validation.md  pages-synchronization-findings.md  platform-readiness-assessment.md  publication-artifact-inventory.json  publication-artifact-inventory.md  publication-infrastructure-audit-followup.md  publication-lifecycle-validation.md  publication-readiness-audit.md  publication-readiness-summary.md  publication-readiness.md  publication-system-action-items.md  publication-system-audit.md  research-peer-review-audit.md  research-peer-review-tasks.md  template-extraction-opportunities.md  zenodo-integration-audit.md  zenodo-readiness.md
reflector/docs/: act.md  ai-onboarding.md  architecture-overview.md  (+17 more)
(+214 files in other folders)
